Fixes navbar scrolling issue on mobile

--- a/css/jawlaTracker.css
+++ b/css/jawlaTracker.css
@@ -48,6 +48,7 @@ body {
 
 .main-container {
   padding: 0;
+  overflow-x: hidden;
 }
 
 .jawla-toolbar-container {
